# octopus

./: .gitignore  .replit  Cargo.toml  README.md  replit.md
rust_src/: main.rs
rust_src/basics/: aligned_read.rs  aligned_template.rs  cigar_string.rs  contig_region.rs  genomic_region.rs  mod.rs  pedigree.rs  phred.rs  ploidy_map.rs  read_pileup.rs  tandem_repeat.rs  trio.rs
rust_src/concepts/: comparable.rs  equitable.rs  mappable.rs  mod.rs
rust_src/config/: common.rs  mod.rs  option_parser.rs
rust_src/containers/: mappable_block.rs  mappable_flat_multi_set.rs  mappable_flat_set.rs  mappable_map.rs  mod.rs  probability_matrix.rs
rust_src/core/: mod.rs
rust_src/core/callers/: caller.rs  cancer_caller.rs  cell_caller.rs  individual_caller.rs  mod.rs  polyclone_caller.rs  population_caller.rs  trio_caller.rs
rust_src/core/csr/: mod.rs
rust_src/core/models/: haplotype_likelihood.rs  mod.rs
rust_src/core/tools/: bad_region_detector.rs  bam_realigner.rs  genome_walker.rs  haplotype_filter.rs  mod.rs  read_assigner.rs  vcf_header_factory.rs  (+1 more)
rust_src/exceptions/: error.rs  file_errors.rs  mod.rs  program_error.rs  user_error.rs
rust_src/io/: mod.rs
rust_src/logging/: logger.rs
rust_src/readpipe/: mod.rs  read_pipe.rs
rust_src/utils/: compression.rs  genotype_reader.rs  hash_functions.rs  input_reads_profiler.rs  kmer_mapper.rs  maths.rs  memory_footprint.rs  mod.rs  path_utils.rs  read_duplicates.rs  read_stats.rs  repeat_finder.rs  sequence_utils.rs  string_utils.rs  system_utils.rs  thread_pool.rs  timing.rs
scripts/: build_rust.sh
(+71 files in other folders)
